# annodize

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  README.md  entry_points.ini  environment.yml  mkdocs.yml  pyproject.toml  setup.cfg
.github/workflows/: python-publish.yml  python-testing.yml
annodize/: __init__.py  _field.py  _func_fields.py  _repr.py  basic.py  core.py  example.py  field.py  inspect_ext.py  typing.py  typing_compat.py
annodize/autoload/: __init__.py  interface.py
annodize/autoload/test/: test_interface.py
annodize/core/: meta.py  misc.py  wrapper.py
annodize/dataframe/: __init__.py  ann.py  api.py  field_types.py  plugin_loader.py  schema.py
annodize/dataframe/example/: __init__.py  col_major.py  plugin.py  row_major.py
annodize/dataframe/test/: conftest.py  test_plugins.py  test_schema.py
annodize/ext/: inspect.py  typing.py
annodize/task/: __init__.py  _abstract_task.py  _load.py  _task.py
annodize/test/: test_fake.py  test_minimal.py
annoframe/: __init__.py  basic.py  typing.py
annoframe/test/: __init__.py  test_fake.py
docs/: environment.yml  index.md
examples/: dev_use.py  my_hooks.py  simple.py
playground/: basic.py  bears.py  loader.ipynb
