[build-system]
requires = ["setuptools >= 45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["annodize"]

[tool.mypy]
python_version = "3.10"
files = 'annodize/**/*.py'
warn_unused_configs = true

[[tool.mypy.overrides]]
module = 'annodize.*'

[tool.black]
line-length = 88
include = '^/annodize.*\.py' # all .py files
extend-exclude = '''
^/setup.py
|^/docs
|^/dist
'''

[tool.isort]
profile = "black"
skip_gitignore = true
src_paths = ["annodize"]
line_length = 88
