[bumpversion]
current_version = 0.1.0
commit = True
tag = True
files =
	./annodize/version.py
	./setup.cfg
parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(\-(?P<release>[a-z]+)(?P<n>\d+))?
serialize =
	{major}.{minor}.{patch}

[metadata]
name = annodize
version = 0.1.0
description = "Shocking annotations"
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/NowanIlfideme/annodize
classifiers =
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent
	Topic :: Software Development :: Libraries :: Python Modules
keywords =
	Python
	Dataframe
	Pandas
	PySpark
	Annotated
author = Anatoly Makarevich
author_email = git@nowan.dev
license = MIT

[options]
zip_safe = False
include_package_data = True
python_requires = >=3.9
packages = find:
install_requires =
	typing_extensions  # always, since we want Required and NotRequired
	wrapt  # https://wrapt.readthedocs.io/en/latest/
	makefun  # https://smarie.github.io/python-makefun/
	typingx[pep655]  # https://github.com/PrettyWood/typingx
	future_typing;python_version<'3.10'  # https://github.com/PrettyWood/future_typing

[options.package_data]
* = *.yaml, *.yml, py.typed

[options.extras_require]
dev =
	bump2version
	black~=21.12b0
	isort~=5.10.1
	flake8~=4.0.1
	mypy~=0.931
	coverage~=6.0.2
	pytest~=6.2.5
	pytest-mock~=3.6.1
	pytest-cov~=3.0.0
	pre-commit~=2.17.0
docs =
	mkdocs
	mkdocs-material
	mkdocstrings
	pymdown-extensions
	pygments
pandas =
	pandas>=1.0.0  # consider >=1.4.0?
pyspark =
	pyspark>=3.0.0  # consider >=3.2.0?
# other dataframe libraries can be supported, e.g. polars, vaex, others
# non-dataframe libraries can be supported, e.g. xarray :)
# other type checkers?...
